force-app/main/default/objects/Opportunity_Attachment__c/Opportunity_Attachment__c.object-meta.xml
<CustomObject>
    <description>An attachments object to replace the standard attachments object in Salesforce, to allow for attachment types.</description>
    <label>Attachment</label>
    <nameField>
        <label>Attachments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>