force-app/main/default/objects/Opportunity_Attachment__c/fields/Attachment_Type__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Type__c</fullName>
    <label>Attachment Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Funding_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACT Agreement</fullName>
            </value>
            <value>
                <fullName>Animal Use – SC Response</fullName>
            </value>
            <value>
                <fullName>Animal Use Worksheet</fullName>
            </value>
            <value>
                <fullName>Biographical sketches</fullName>
            </value>
            <value>
                <fullName>CI Foreign Approval</fullName>
            </value>
            <value>
                <fullName>Client Certification (hard gate)</fullName>
            </value>
            <value>
                <fullName>DOE Approved Proposal</fullName>
            </value>
            <value>
                <fullName>HQ Foreign Approval</fullName>
            </value>
            <value>
                <fullName>Incoming WAS Email from PNSO</fullName>
            </value>
            <value>
                <fullName>IP Management Plan</fullName>
            </value>
            <value>
                <fullName>IWO Funding Document (hard gate)</fullName>
            </value>
            <value>
                <fullName>MSOF</fullName>
            </value>
            <value>
                <fullName>NF-SPP Agreement</fullName>
            </value>
            <value>
                <fullName>Obligation Cost Roadmap</fullName>
            </value>
            <value>
                <fullName>OCI Addendum</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Proposal Letter</fullName>
            </value>
            <value>
                <fullName>PSO Foreign Approval</fullName>
            </value>
            <value>
                <fullName>Research Plan</fullName>
            </value>
            <value>
                <fullName>SC Analysis Worksheet</fullName>
            </value>
            <value>
                <fullName>SC Foreign Approval</fullName>
            </value>
            <value>
                <fullName>Sponsor Registration</fullName>
            </value>
            <value>
                <fullName>SPP Justification</fullName>
            </value>
            <value>
                <fullName>Statement of Work (hard gate)</fullName>
            </value>
            <value>
                <fullName>Sub-contract Plan</fullName>
            </value>
            <value>
                <fullName>TPEC Foreign Approval</fullName>
            </value>
            <value>
                <fullName>Work Authorization Document</fullName>
            </value>
            <value>
                <fullName>Animal Use -SC Response</fullName>
                <isActive>false</isActive>
                <label>Animal Use -SC Response</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>