force-app/main/default/objects/Opportunity_Attachment__c/fields/AttachmentId__c.field-meta.xml
<CustomField>
    <fullName>AttachmentId__c</fullName>
    <description>The Id of the attachment.</description>
    <inlineHelpText>The Id of the attachment.</inlineHelpText>
    <label>AttachmentId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>