force-app/main/default/objects/Opportunity_Attachment__c/fields/Funding_Type__c.field-meta.xml
<CustomField>
    <fullName>Funding_Type__c</fullName>
    <label>Funding Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACT</fullName>
            </value>
            <value>
                <fullName>CRADA</fullName>
            </value>
            <value>
                <fullName>DHS</fullName>
            </value>
            <value>
                <fullName>F-SPP</fullName>
            </value>
            <value>
                <fullName>IWO</fullName>
            </value>
            <value>
                <fullName>NF-SPP</fullName>
            </value>
            <value>
                <fullName>NIC-RW</fullName>
            </value>
            <value>
                <fullName>SIPP</fullName>
            </value>
            <value>
                <fullName>DOE Direct</fullName>
            </value>
            <value>
                <fullName>FIN Plan Proposal</fullName>
                <isActive>false</isActive>
                <label>FIN Plan Proposal</label>
            </value>
            <value>
                <fullName>Field Work Proposal</fullName>
                <isActive>false</isActive>
                <label>Field Work Proposal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>