force-app/main/default/objects/Opportunity_Attachment__c/fields/view_doc__c.field-meta.xml
<CustomField>
    <fullName>view_doc__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; +  AttachmentId__c ,&quot;view me&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>view doc</label>
    <type>Text</type>
</CustomField>