force-app/main/default/objects/Opportunity_Attachment__c/recordTypes/DOE_Direct.recordType-meta.xml
<RecordType>
    <fullName>DOE_Direct</fullName>
    <active>true</active>
    <description>DOE Direct Funding Type</description>
    <label>DOE Direct</label>
</RecordType>